更新启动文件